--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.0
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 Jinja2==2.10
 Werkzeug==0.14.1
 WTForms==2.1
+
 
 # requirements for Heroku
 gunicorn==19.7.1
