--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 Flask==1.0.2
 Flask-Login==0.4.0
+Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-Jinja2==2.10
 Werkzeug==0.14.1
 WTForms==2.1
-
 
 # requirements for Heroku
 gunicorn==19.7.1
